[tool.poetry]
name = "earworm"
version = "0.2.1"
description = "Create a simple web page to listen to audio files in a directory"
authors = ["Puneeth Chaganti <punchagan@muse-amuse.in>"]
include = ["earworm/static/bundle.js"]
readme = "README.md"
homepage = "https://github.com/punchagan/earworm/"
repository = "https://github.com/punchagan/earworm/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

[tool.poetry.dependencies]
python = "^3.6.1"
Jinja2 = "^3.0.1"
requests = "^2.25.1"
tinytag = "^1.5.0"
Pillow = "^8.2.0"
PyYAML = "^5.4.1"
python-dateutil = "^2.8.1"
webassets = "^2.0"
dataclasses = {version = "^0.8", python = "~3.6"}

[tool.poetry.dev-dependencies]
mypy = "^0.910"
types-requests = "^2.25.0"
types-python-dateutil = "^0.1.4"
types-PyYAML = "^5.4.3"
types-dataclasses = {version = "^0.1.5", python = "~3.6"}

[tool.poetry.scripts]
earworm = 'earworm.generate:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
